--- a/src/components/code/code-other/pages/elem-c.html
+++ b/src/components/code/code-other/pages/elem-c.html
@@ -6,11 +6,12 @@
   <h2>Содержание</h2>
 
   <p><a href="#links">links</a></p>
+  <p><a href="#curs">онлайн курсы</a></p>
   <p><a href="#about">about</a></p>
   <p><a href="#install">install</a></p>
   <p><a href="#intro">intro</a></p>
   <p><a href="#types">Типы данных</a></p>
-  <p><a href="inout">Операции ввода-вывода</a></p>
+  <p><a href="#inout">Операции ввода-вывода</a></p>
   <p><a href="#prog1">Первая программа</a></p>
   <p><a href="#prog2">Программа вывода целого числа</a></p>
   <p><a href="#prog3">Программа ввода двух дробных чисел</a></p>
@@ -29,6 +30,36 @@
   <div class="anchor" id="links"></div>
   <h2>links</h2>
 
+  <h3>онлайн редактор кода</h3>
+  <p><a href="https://replit.com/languages/c">https://replit.com/languages/c</a></p>
+  <p><a href="https://www.onlinegdb.com/online_c_compiler">https://www.onlinegdb.com/online_c_compiler</a></p>
+
+  <h3>онлайн игры</h3>
+  <p><a href="https://learningcontent.cisco.com/games/binary/index.html">https://learningcontent.cisco.com/games/binary/index.html</a> Двоичные числа</p>
+  <p><a href="https://games.penjee.com/binary-bonanza/">https://games.penjee.com/binary-bonanza/</a> Двоичные числа</p>
+  <p><a href="https://games.penjee.com/binary-numbers-game/">https://games.penjee.com/binary-numbers-game/</a> Двоичные числа</p>
+  <p><a href="https://penjee.com/">https://penjee.com/</a></p>
+</article>
+
+
+<!-- онлайн курсы -->
+<article class="article">
+  <div class="anchor" id="curs"></div>
+  <h2>онлайн курсы</h2>
+
+  <p><a href="https://metanit.com/c/tutorial/">https://metanit.com/c/tutorial/</a> Руководство по языку программирования Си</p>
+  <p><a href="https://stepik.org/course/57680/">https://stepik.org/course/57680/</a> C для начинающих (теория и задачи). Татьяна Дербышева, Татьяна Овсянникова</p>
+  <p><a href="https://stepik.org/course/55690/">https://stepik.org/course/55690/</a> С для начинающих. Татьяна Дербышева, Татьяна Овсянникова</p>
+  <p><a href="https://stepik.org/course/65259/">https://stepik.org/course/65259/</a> Моя первая большая программа. Татьяна Дербышева</p>
+  <p><a href="https://stepik.org/course/3078/">https://stepik.org/course/3078/</a> Основы программирования на C. Задачи. Кирилл Постнов</p>
+  <p><a href="https://stepik.org/course/182938/">https://stepik.org/course/182938/</a> Программирование на С. Сергей Чесноков</p>
+  <p><a href="https://code-basics.com/ru/languages/clang">https://code-basics.com/ru/languages/clang</a> Курс Си</p>
+  <p><a href="https://ru.hexlet.io/courses/introduction-to-c">https://ru.hexlet.io/courses/introduction-to-c</a> Введение в Си</p>
+  <p><a href="https://itproger.com/course/c-programming">https://itproger.com/course/c-programming</a> Язык Си для начинающих</p>
+  <p><a href="https://youngcoder.ru/">https://youngcoder.ru/</a> Основы программирования на языке С. Кирилл Постнов</p>
+  <p><a href="https://kpolyakov.spb.ru/school/c.htm">https://kpolyakov.spb.ru/school/c.htm</a> Язык программирования Си практический курс. Константин Поляков</p>
+  <p><a href="https://cs.mipt.ru/c_intro">https://cs.mipt.ru/c_intro</a> Курс молодого бойца на 1 курсе язык Си. Тимофей Хирьянов</p>
+  <p><a href="https://younglinux.info/c/">https://younglinux.info/c/</a> Основы языка C. С. Шапошникова</p>
 </article>
 
 
@@ -60,6 +91,56 @@
 <article class="article">
   <div class="anchor" id="install"></div>
   <h2>install</h2>
+
+  <h3>Командная строка</h3>
+  <p>На Windows 10 рекомендуем установить WSL (Windows Subsystem for Linux) или WSL2</p>
+  <code>wsl --version</code>
+  <code>wsl --install</code>
+
+  <h3>Текстовые редакторы</h3>
+  <ol>
+    <li>Vim</li>
+    <li>Notepad++</li>
+    <li>VSCode</li>
+  </ol>
+
+  <h3>Компиляторы</h3>
+  <ol>
+    <li>gcc</li>
+    <li>clang</li>
+  </ol>
+
+  <h3>IDE</h3>
+  <ol>
+    <li>
+      <h4>Dev-C++</h4>
+      <p><a href="https://bloodshed.net/">https://bloodshed.net/</a> Бесплатная среда разработки</p>
+    </li>
+    <li>
+      <h4>Palles C</h4>
+      <p><a href="http://www.smorgasbordet.com/pellesc/download.htm">http://www.smorgasbordet.com/pellesc/download.htm</a> Бесплатная среда разработки</p>
+    </li>
+    <li>
+      <h4>Code Blocks</h4>
+      <p><a href="https://www.codeblocks.org/downloads/">https://www.codeblocks.org/downloads/</a> Бесплатная среда разработки</p>
+    </li>
+    <li>
+      <h4>Code Lite</h4>
+      <p><a href="https://codelite.org/">https://codelite.org/</a> Бесплатная среда разработки</p>
+    </li>
+    <li>
+      <h4>Clion</h4>
+      <p><a href="https://www.jetbrains.com/ru-ru/clion/">https://www.jetbrains.com/ru-ru/clion/</a> Платная кросс-платформенная IDE для Си и Си++ от JetBrains</p>
+    </li>
+    <li>
+      <h4>XCode</h4>
+      <p><a href="https://developer.apple.com/xcode/">https://developer.apple.com/xcode/</a> Платная IDE для apple, macOS, iOS</p>
+    </li>
+    <li>
+      <h4>Microsoft Visual Studio</h4>
+      <p><a href="https://visualstudio.microsoft.com/ru/">https://visualstudio.microsoft.com/ru/</a> Есть бесплатная версия Community</p>
+    </li>
+  </ol>
 
 
 </article>
@@ -130,18 +211,45 @@
   <div class="anchor" id="types"></div>
   <h3>Типы данных</h3>
 
+  <h4>Целочисленные типы данных</h4>
+  <p>Размеры стандартных типов данных char, short, int, long, long long четко не определены и могут быть разными на разных платформах (компьютерах, операционных системах и компиляторах для них).</p>
   <ul>
     <li>unsigned char. 8 бит. От 0 ('\x00') до 255 ('\xFF')</li>
     <li>[signed] char. 8 бит. От -128 до 127</li>
     <li>unsigned short [int]. 16 бит. от 0 до 65535</li>
     <li>[signed] short [int]. 16 бит. от -32768 до 32767</li>
-    <li>enum. 32 бита. от -2147483648 до 2147483647</li>
     <li>unsigned [int]. 32 бита. от 0 до 4294967295</li>
     <li>[signed] int. 32 бита. от -2147483648 до 2147483647</li>
     <li>unsigned long. 32 бита. от 0 до 4294967295</li>
-    <li>[signed] long. 32 бита. от -2147483648 до 2147483647</li>
+    <li>[signed] long. 32 бита. от -2,147,483,648 до 2,147,483,647</li>
+    <li>unsigned long long. 64 бита. от 0 до 18,446,744,073,709,551,615</li>
+    <li>[signed] Long long. 64 бита. от -9,223,372,036,854,775,808 до 9,223,372,036,854,775,807</li>
+  </ul>
+
+  <h4>Платформонезависимые типы данных</h4>
+  <p>Начиная с С99 определены типы данных, в которых можно указать размер для различных целей. Они считаются платформонезависимыми.</p>
+  <ul>
+    <li>int32_t и uint32_t - размер ровно 32 бита (знаковый и беззнаковый).</li>
+    <li>int_least32_t и uint_least32_t- ближайший по длине, не менее 32 бит (может и больше).</li>
+    <li>int_fast32_t и uint_fast32_t- самый быстрый длиной не менее 32, для этого типа данных самая быстрая работа на данной платформе и есть 32 бита (или больше). То есть если самые быстрые вычисления будут на 64 битах, то int_fast32_t будет иметь размер 64 бита.</li>
+  </ul>
+  <p>Аналогичные типы не только для 32, но и для 8, 16, 64. int128_t присутствует не везде.</p>
+
+  <h4>Дробные типы данных</h4>
+  <ul>
     <li>float. 32 бита. от 3.4E-38 до 3.4E38</li>
     <li>[long] double. 64 бита. от 1.7E-308 до 1.7E308</li>
+  </ul>
+
+  <p>На тип float отводится 32 бита (0..31). В 31 бите хранится знак sign (1 бит), с 23 по 30 бит хранится экспонента exponent (8 бит), с 0 по 22 бит хранится дробная часть fraction (23 бита)</p>
+  <p>На тип double отводится 64 бита (0..63). В 63 бите хранится знак sign (1 бит), с 52 по 62 бит хранится экспонента exponent (11 бит), с 0 по 51 бит хранится дробная часть fraction (52 бита)</p>
+
+  <h4>int и float</h4>
+  <p>Даже если int и float имеет одинаковый размер, они будут иметь разный диапазон и разную точность. У float большой диапазон, но низкая точность. У int большая точность, но более узкий диапазон представления чисел. Поэтому при преобразовании из int в float и наоборот может быть потеря точности или переполнение.</p>
+
+  <h4>Остальные типы данных</h4>
+  <ul>
+    <li>enum. 32 бита. от -2147483648 до 2147483647</li>
   </ul>
 </article>
 
@@ -160,21 +268,57 @@
     <li>stdaux - последовательного порта</li>
   </ol>
 
-  <p>Функция printf() обеспечивает форматный вывод данных в поток stdout. Знак % означает - возьми переменную после запятой и распечатай ее значение. Тип переменной задается после знака % и может быть одним из</p>
+  <h4>Функция printf()</h4>
+  <p>Функция printf() обеспечивает форматный вывод данных в поток stdout.</p>
+
+  <h4>Спецификатор формата</h4>
+  <p>В printf спецификатор формата имеет общий вид:</p>
+  <code>%[флаги][ширина][.точность][размер]тип</code>
+  <p>Знак % означает - возьми переменную после запятой и распечатай ее значение.</p>
   <ul>
-    <li>d, i, u int десятичное целое со знаком</li>
-    <li>o int восьмеричное целое без знака</li>
-    <li>x int шестнадцатеричное целое без знака, использующее abcdef</li>
-    <li>X int шестнадцатеричное целое без знака, использующее ABCDEF</li>
-    <li>f double значение со знаком в формате d.d</li>
-    <li>e double значение со знаком в формате ded</li>
-    <li>E double значение со знаком в формате dEd</li>
-    <li>g double выбирает более компактный формат f или e</li>
-    <li>G double выбирает более компактный формат f или E</li>
-    <li>c int одиночный символ</li>
-    <li>s строка Символы строки печатаются до первого нулевого символа ("\0") или до заданной точности</li>
-    <li>p указатель far на void Печатается адрес, указанный аргументом, в формате xxxx:yyyy, где xxxx - сегмент, yyyy- смещение, а x и y -строчные шестнадцатеричные цифры</li>
+    <li>
+      <p>Тип - это тип переменной, единственный обязательный параметр спецификатора. Остальные параметры могут быть а могут и не быть. Тип переменной задается после знака % и может быть одним из</p>
+      <ul>
+        <li>d, i, u int десятичное целое со знаком</li>
+        <li>o int восьмеричное целое без знака</li>
+        <li>x int шестнадцатеричное целое без знака, использующее abcdef</li>
+        <li>X int шестнадцатеричное целое без знака, использующее ABCDEF</li>
+        <li>f double значение со знаком в формате d.d</li>
+        <li>e double значение со знаком в формате ded</li>
+        <li>E double значение со знаком в формате dEd</li>
+        <li>g double выбирает более компактный формат f или e</li>
+        <li>G double выбирает более компактный формат f или E</li>
+        <li>c int одиночный символ</li>
+        <li>s строка Символы строки печатаются до первого нулевого символа ("\0") или до заданной точности</li>
+        <li>p указатель far на void Печатается адрес, указанный аргументом, в формате xxxx:yyyy, где xxxx - сегмент, yyyy- смещение, а x и y -строчные шестнадцатеричные цифры</li>
+      </ul>
+    </li>
+    <li>Размер типа - это l, ll, h, hh</li>
+    <li>ширина - на печать данных отведено ширина символов (или больше).</li>
+    <li>
+      флаги
+      <ul>
+        <li>+ - указывать явно знак числа, в том числе положительного</li>
+        <li>- - выравнивание влево по указанной ширине</li>
+        <li>0 - дополнять слева числа до указанной ширины не пробелами, а 0.</li>
+      </ul>
+    </li>
+    <li>.точность указывает сколько знаков после точки печатать</li>
   </ul>
+
+  <h4>Печать строк</h4>
+  <p>Для печати строк используют тип s (string).</p>
+  <p>Ширина - печатать n или более символов, с выравниванием вправо или влево (отрицательная ширина), дополняя пробелами. Если строка длиннее, то ширина игнорируется.</p>
+  <p>Точность - если нужно обрезать строку. %.5s - не более 5 символов.</p>
+  <code>printf("/%5s/\n", "abc");         // /  abc/</code>
+  <code>printf("/%05s/\n", "abc");        // /00abc/</code>
+  <code>printf("/%-5s/\n", "abc");        // /abc  /</code>
+  <code>printf("/%5s/\n", "abcdefgh");    // /abcdefgh/</code>
+  <code>printf("/%.5s/\n", "abcdefgh");   // /abcde/</code>
+  <code>printf("/%.5s/\n", "abc");        // /abc/</code>
+
+
+
 
   <p>Функция scanf() обеспечивает форматный ввод данных из потока stdin. Текст внутри будет пропущен. Знак % означает - возьми переменную после запятой и запиши в нее значение определенного размера. Размер значения задается после знака % и может быть одним из</p>
   <ol>
