--- a/src/components/code/code-pascal/pages/elem-pascal.html
+++ b/src/components/code/code-pascal/pages/elem-pascal.html
@@ -36,6 +36,7 @@
   <p><a href="https://www.lazarus-ide.org/index.php?page=downloads">lazarus-ide.org</a> Установка Lazarus в Windows</p>
   <p><a href="https://learnpascal.ru/">learnpascal.ru</a> Уроки Pascal</p>
   <p><a href="http://www.freepascal.ru/">freepascal.ru</a> Уроки Pascal</p>
+  <p><a href="http://intuit.valrkl.ru/course-1265/index.html">intuit.valrkl.ru/course-1265/index.html</a> Программирование на Lazarus</p>
   <p><a href="https://pinskolimp.blogspot.com/">pinskolimp.blogspot.com</a> Подготовка к олимпиадам по информатике</p>
 </article>
 
