--- a/src/components/code/code-other/pages/elem-cpp.html
+++ b/src/components/code/code-other/pages/elem-cpp.html
@@ -5,8 +5,8 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#about">about</a></p>
   <p><a href="#links">links</a></p>
+  <p><a href="#about">about</a></p>
   <p><a href="#install">install</a></p>
   <ol>
     <li><a href="#vscode">Редактор кода VS Code</a></li>
@@ -52,6 +52,25 @@
 </article>
 
 
+<!-- links-->
+<article class="article">
+  <div class="anchor" id="links"></div>
+  <h2>links</h2>
+
+  <h3>онлайн курсы</h3>
+  <p><a href="https://metanit.com/cpp/tutorial/">metanit.com/cpp/tutorial</a> Введение в С++</p>
+  <p><a href="https://education.yandex.ru/handbook/cpp/">education.yandex.ru/handbook/cpp</a> Основы С++</p>
+  <p><a href="https://stepik.org/course/193691/">https://stepik.org/course/193691/</a> Добрый, добрый C/C++ с Сергеем Балакиревым</p>
+  <p><a href="https://stepik.org/course/7/">https://stepik.org/course/7/</a> Программирование на языке C++. Александр Смаль, Михаил Кринкин</p>
+  <p><a href="https://stepik.org/course/3206/">https://stepik.org/course/3206/</a> Программирование на языке C++ (продолжение). Александр Смаль</p>
+
+  <h3>статьи</h3>
+  <p><a href="https://blog.skillfactory.ru/kak-pisat-programmi-c-plus-plus/">blog.skillfactory.ru/kak-pisat-programmi-c-plus-plus</a> Язык программирования С++ разбираемся и пишем простую программу</p>
+  <p><a href="https://www.onlinegdb.com/online_c++_compiler/">onlinegdb.com/online_c++_compiler</a> Онлайн компилятор С++</p>
+
+</article>
+
+
 <!-- about-->
 <article class="article">
   <div class="anchor" id="about"></div>
@@ -66,19 +85,6 @@
   <p>В 1979-1980-х годах датский программист Бьерн Страуструп (Bjarne Stroustrup) работал в Bell Labs и разработал язык С++ как расширение к языку Си и назвал его "Си с классами". Он дополнил язык Си возможностями ООП. До этого концепция ООП была реализована в Simula67.</p>
   <p>1983 язык C++</p>
   <p>В 1983 году язык "Си с классами" был переименован в С++. В 1985 году он презентовал свою разработку в книге "Язык программирования С++" и была вывпущена первая коммерческая версия языка С++. Впоследствии в язык С++ добавились новые возможности и язык Си и С++ стали развиваться независимо друг от друга. В 1989 году была выпущена вторая версия языка С++ 2.0. В 2003 году вышла новая версия С++ 03. В 2011 году был издан новый стандарт С++ 11.</p>
-</article>
-
-
-<!-- links-->
-<article class="article">
-  <div class="anchor" id="links"></div>
-  <h2>links</h2>
-
-  <p><a href="https://blog.skillfactory.ru/kak-pisat-programmi-c-plus-plus/">blog.skillfactory.ru/kak-pisat-programmi-c-plus-plus</a> Язык программирования С++ разбираемся и пишем простую программу</p>
-  <p><a href="https://education.yandex.ru/handbook/cpp/">education.yandex.ru/handbook/cpp</a> Основы С++</p>
-  <p><a href="https://www.onlinegdb.com/online_c++_compiler/">onlinegdb.com/online_c++_compiler</a> Онлайн компилятор С++</p>
-  <p><a href="https://metanit.com/cpp/tutorial/">metanit.com/cpp/tutorial</a> Введение в С++</p>
-
 </article>
 
 
